noinst_LIBRARIES = libclearsilver.a

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/cs -I$(srcdir)/util -I$(srcdir)/streamhtmlparser
libclearsilver_a_CFLAGS = -g -Wall -Wextra -Wno-strict-aliasing -Wno-unused-parameter
libclearsilver_a_SOURCES = \
		cs/csparse.c \
		util/neo_auto.c \
		util/neo_err.c \
		util/neo_files.c \
		util/neo_hash.c \
		util/neo_hdf.c  \
		util/neo_misc.c \
		util/neo_rand.c \
		util/neo_str.c  \
		util/ulist.c \
		util/wildmat.c \
		streamhtmlparser/htmlparser.c \
		streamhtmlparser/statemachine.c \
		streamhtmlparser/jsparser.c \
		streamhtmlparser/jsparser_fsm.h \
		streamhtmlparser/statemachine.h \
		streamhtmlparser/htmlparser_fsm.h \
		streamhtmlparser/htmlparser.h \
		streamhtmlparser/jsparser_fsm.h \
		streamhtmlparser/jsparser.h \
		util/neo_hash.h \
		util/neo_rand.h \
		util/neo_misc.h \
		util/neo_hdf.h \
		util/neo_str.h \
		util/neo_err.h \
		util/ulist.h \
		util/neo_auto.h \
		util/skiplist.h \
		util/neo_files.h \
		util/wildmat.h \
		cs/cs.h \
		ClearSilver.h \
		cs_config.h
  
